# ITI_Reproduction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: config.yaml
notebooks/: feature_analysis.py  feature_analysis_reproduction.py  outputs.py
scripts/: run.py
src/iti_reproduction/: cli.py  evaluate.py  get_activation.py  interveners.py  intervention.py  presets.py  scheme.py  utils.py
