[project]
name = "iti-reproduction"
version="0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "numpy>=2.3.2",
    "pyvene>=0.1.7",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "nnsight>=0.4.11",
    "pandas>=2.3.1",
    "evaluate>=0.4.5",
    "sacrebleu>=2.5.1",
    "rouge-score>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/iti_reproduction"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.4.1",
]
