[project]
name = "iti-reproduction"
version="0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "pyvene>=0.1.7",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "transformers>=4.55.0",
    "nnsight>=0.4.11",
    "pandas>=2.3.1",
    "evaluate>=0.4.5",
    "sacrebleu>=2.5.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.1",
    "polars>=1.34.0",
    "seaborn>=0.13.2",
    "numpy>=2.2.6",
    "torch>=2.10.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' " },
]
bleurt = { git = "https://github.com/google-research/bleurt.git" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/iti_reproduction"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "marimo>=0.17.3",
    "pytest>=8.4.1",
]
